# soulless-applet

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
i18n/en/: soulless_applet.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  dbus.rs  i18n.rs  main.rs
