[package]
name = "soulless-applet"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-or-later"
description = "launcher button"
repository = "https://github.com/hmrdsmoke/soulless-applet"

[dependencies]
soulless-organizer = { path = "../organizer" }
futures-util = "0.3.31"
zbus         = { version = "5", features = ["tokio"] }
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
cosmic = { workspace = true }

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
